fix(navbar): improve wcag contrast (#712)
See https://github.com/makigas/makigas.es/pull/712

--- a/app/javascript/six/components/navbar.scss
+++ b/app/javascript/six/components/navbar.scss
@@ -118,12 +118,16 @@ $navbar-size: 40px;
   }
 
   .searchbar {
-    --searchbar-box-background: #ffffff80;
+    --searchbar-box-background: #fffc;
 
     margin-bottom: 0;
 
     &:focus-within {
       --searchbar-box-background: #fff;
+    }
+
+    &__search::placeholder {
+      color: rgb(70 70 70 / 90%);
     }
   }
 
